# malloc-lab

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h  mdriver  mdriver.c  mm.c  mm.c.dynamic_list  mm.c.no_reuse  mm.c.static_list  mm.h
